--- a/test/index.html
+++ b/test/index.html
@@ -18,11 +18,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=171095111"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=256768970" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=56085791" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=4254629761"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=73850937" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=4288456295" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -125,7 +125,7 @@ transform-origin: 50% 50%;
          <p id="u533-4">Тимофей Малахов</p>
         </div>
         <div class="clearfix colelem shared_content" id="u543-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u543-4_content"><!-- content -->
-         <p>Добро пожаловать на мой сайт-портфолио! Специализируюсь в областях: графического и веб-дизайна. Занимаюсь разработкой веб-сайтов и созданием различного рода графики.</p>
+         <p class="shared_content" data-content-guid="u543-4_0_content">Добро пожаловать на мой сайт-портфолио! Специализируюсь в областях: графического и веб-дизайна. Занимаюсь разработкой веб-сайтов и созданием различного рода графики.</p>
         </div>
         <a class="nonblock nontext Button rounded-corners btns clearfix colelem shared_content" id="buttonu1687" href="contacts.html" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="buttonu1687_content"><!-- container box --><div class="clearfix grpelem" id="u1688-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p>связаться</p></div></a>
         <a class="nonblock nontext anim_swing arrow clip_frame colelem shared_content" id="u2067" href="index.html#works" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u2067_content"><!-- svg --><img class="svg temp_no_img_src" id="u2063" data-orig-src="images/arrow-05.svg?crc=4052063042" width="37" height="52" alt="" data-mu-svgfallback="images/arrow-05_poster_.png?crc=487955545" src="images/blank.gif?crc=4208392903"/></a>
@@ -384,11 +384,14 @@ html { background: url(assets/) #000 no-repeat center center fixed; }
            <span class="nonblock nontext MuseLinkActive transition clip_frame grpelem placeholder" data-placeholder-for="u115_content"><!-- placeholder node --></span>
           </div>
           <span class="size_fixed colelem placeholder" data-placeholder-for="u1726_content"><!-- placeholder node --></span>
-          <div class="clearfix colelem" id="pu533-6"><!-- group -->
-           <span class="clearfix grpelem placeholder" data-placeholder-for="u533-6_content"><!-- placeholder node --></span>
-           <span class="size_fixed grpelem placeholder" data-placeholder-for="u2075_content"><!-- placeholder node --></span>
+          <span class="size_fixed colelem placeholder" data-placeholder-for="u2075_content"><!-- placeholder node --></span>
+          <div class="h2 clearfix colelem" id="u45808-6" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+           <p>Привет, меня зовут</p>
+           <p id="u45808-4">Тимофей Малахов</p>
           </div>
-          <span class="clearfix colelem placeholder" data-placeholder-for="u543-4_content"><!-- placeholder node --></span>
+          <div class="clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u543-4"><!-- content -->
+           <span class="placeholder" data-placeholder-for="u543-4_0_content"><!-- placeholder node --></span>
+          </div>
           <span class="nonblock nontext Button rounded-corners btns clearfix colelem placeholder" data-placeholder-for="buttonu1687_content"><!-- placeholder node --></span>
           <span class="nonblock nontext anim_swing arrow clip_frame colelem placeholder" data-placeholder-for="u2067_content"><!-- placeholder node --></span>
           <span class="size_fixed colelem placeholder" data-placeholder-for="u3530_content"><!-- placeholder node --></span>
