--- a/test/index.html
+++ b/test/index.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Портфолио</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=171095111"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4082629938" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3893517318"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3840786580" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=4254629761"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=4288456295" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=526450327" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -132,10 +132,10 @@ transform-origin: 50% 50%;
        </div>
       </div>
      </div>
-     <div class="browser_width colelem shared_content" id="u366-bw" data-content-guid="u366-bw_content">
+     <div class="browser_width colelem" id="u366-bw">
       <div id="u366"><!-- column -->
        <div class="clearfix" id="u366_align_to_page">
-        <div class="size_fixed colelem shared_content" id="u3530" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u3530_content"><!-- custom html -->
+        <div class="size_fixed colelem" id="u3530" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
          
 
         </div>
@@ -143,29 +143,23 @@ transform-origin: 50% 50%;
         <div class="h2 clearfix colelem shared_content" id="u3386-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u3386-4_content"><!-- content -->
          <p><span class="h21">Недавние работы</span></p>
         </div>
-        <div class="clearfix colelem" id="pu3391"><!-- group -->
+        <div class="clearfix colelem shared_content" id="pu3391" data-content-guid="pu3391_content"><!-- group -->
          <div class="shadow rounded-corners project-pic grpelem" id="u3391"><!-- simple frame -->
           <div class="fluid_height_spacer"></div>
          </div>
          <a class="nonblock nontext project-pic shadow museBGSize grpelem" id="u3568" href="skyeng-lp.html"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
-         <div class="project-pic shadow grpelem" id="u3563"><!-- simple frame -->
-          <div class="fluid_height_spacer"></div>
-         </div>
+         <a class="nonblock nontext project-pic shadow museBGSize grpelem" id="u3563" href="sportblend-lp.html"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
         </div>
-        <div class="clearfix colelem" id="pu4432"><!-- group -->
+        <div class="clearfix colelem shared_content" id="pu4432" data-content-guid="pu4432_content"><!-- group -->
          <a class="nonblock nontext project-pic shadow museBGSize grpelem" id="u4432" href="fastfood-animation.html"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
          <a class="nonblock nontext project-pic shadow museBGSize grpelem" id="u4424" href="alk-lp.html"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
-         <div class="project-pic shadow grpelem" id="u4411"><!-- simple frame -->
-          <div class="fluid_height_spacer"></div>
-         </div>
+         <a class="nonblock nontext project-pic shadow museBGSize grpelem" id="u4411" href="fastfood-animation-copy.html"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
         </div>
-        <div class="clearfix colelem" id="pu17622"><!-- group -->
+        <div class="clearfix colelem shared_content" id="pu17622" data-content-guid="pu17622_content"><!-- group -->
          <div class="project-pic shadow grpelem" id="u17622"><!-- simple frame -->
           <div class="fluid_height_spacer"></div>
          </div>
-         <div class="project-pic shadow museBGSize grpelem" id="u17615"><!-- simple frame -->
-          <div class="fluid_height_spacer"></div>
-         </div>
+         <a class="nonblock nontext project-pic shadow museBGSize grpelem" id="u17615" href="book-ico.html"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
          <div class="project-pic shadow grpelem" id="u17606"><!-- simple frame -->
           <div class="fluid_height_spacer"></div>
          </div>
@@ -253,11 +247,11 @@ html { background: url(assets/) #000 no-repeat center center fixed; }
         </div>
         <a class="nonblock nontext MuseLinkActive museBGSize transition grpelem shared_content" id="u9362" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u9362_content"><!-- simple frame --></a>
         <div class="clearfix grpelem" id="u29362"><!-- group -->
-         <a class="nonblock nontext clip_frame grpelem" id="u29256" href="mailto:timofei.malakhov@yandex.ru" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- svg --><img class="svg temp_no_img_src shared_content" id="u29257" data-orig-src="images/003-yandex.svg?crc=3860152902" width="25" height="25" alt="" data-mu-svgfallback="images/003-yandex_poster_.png?crc=126775701" src="images/blank.gif?crc=4208392903" data-content-guid="u29257_content"/></a>
-         <a class="nonblock nontext clip_frame grpelem" id="u29246" href="https://vk.com/malakhov_tm" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- svg --><img class="svg temp_no_img_src shared_content" id="u29247" data-orig-src="images/001-vk.svg?crc=146517475" width="25" height="25" alt="" data-mu-svgfallback="images/001-vk_poster_.png?crc=177367863" src="images/blank.gif?crc=4208392903" data-content-guid="u29247_content"/></a>
-         <a class="nonblock nontext clip_frame grpelem" id="u29254" href="http://t.me/malakhov_tm" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- svg --><img class="svg temp_no_img_src shared_content" id="u29255" data-orig-src="images/004-telegram.svg?crc=4035730964" width="25" height="25" alt="" data-mu-svgfallback="images/004-telegram_poster_.png?crc=3930821980" src="images/blank.gif?crc=4208392903" data-content-guid="u29255_content"/></a>
-         <a class="nonblock nontext clip_frame grpelem" id="u29252" href="skype:live:timofei.malakhov?chat" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- svg --><img class="svg temp_no_img_src shared_content" id="u29253" data-orig-src="images/002-skype.svg?crc=4258969860" width="25" height="25" alt="" data-mu-svgfallback="images/002-skype_poster_.png?crc=3809753510" src="images/blank.gif?crc=4208392903" data-content-guid="u29253_content"/></a>
-         <a class="nonblock nontext clip_frame grpelem" id="u29248" href="https://www.instagram.com/malakhov.tm/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- svg --><img class="svg temp_no_img_src shared_content" id="u29249" data-orig-src="images/005-instagram.svg?crc=270523009" width="25" height="25" alt="" data-mu-svgfallback="images/005-instagram_poster_.png?crc=382006781" src="images/blank.gif?crc=4208392903" data-content-guid="u29249_content"/></a>
+         <a class="nonblock nontext clip_frame grpelem" id="u29256" href="mailto:timofei.malakhov@yandex.ru" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- svg --><img class="svg temp_no_img_src shared_content" id="u29257" data-orig-src="images/003-yandex.svg?crc=3860152902" width="25" height="25" alt="" title="Яндекс Почта" data-mu-svgfallback="images/003-yandex_poster_.png?crc=126775701" src="images/blank.gif?crc=4208392903" data-content-guid="u29257_content"/></a>
+         <a class="nonblock nontext clip_frame grpelem" id="u29246" href="https://vk.com/malakhov_tm" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- svg --><img class="svg temp_no_img_src shared_content" id="u29247" data-orig-src="images/001-vk.svg?crc=146517475" width="25" height="25" alt="" title="Вконтакте" data-mu-svgfallback="images/001-vk_poster_.png?crc=177367863" src="images/blank.gif?crc=4208392903" data-content-guid="u29247_content"/></a>
+         <a class="nonblock nontext clip_frame grpelem" id="u29254" href="http://t.me/malakhov_tm" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- svg --><img class="svg temp_no_img_src shared_content" id="u29255" data-orig-src="images/004-telegram.svg?crc=4035730964" width="25" height="25" alt="" title="Telegram" data-mu-svgfallback="images/004-telegram_poster_.png?crc=3930821980" src="images/blank.gif?crc=4208392903" data-content-guid="u29255_content"/></a>
+         <a class="nonblock nontext clip_frame grpelem" id="u29252" href="skype:live:timofei.malakhov?chat" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- svg --><img class="svg temp_no_img_src shared_content" id="u29253" data-orig-src="images/002-skype.svg?crc=4258969860" width="25" height="25" alt="" title="Skype" data-mu-svgfallback="images/002-skype_poster_.png?crc=3809753510" src="images/blank.gif?crc=4208392903" data-content-guid="u29253_content"/></a>
+         <a class="nonblock nontext clip_frame grpelem" id="u29248" href="https://www.instagram.com/malakhov.tm/" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- svg --><img class="svg temp_no_img_src shared_content" id="u29249" data-orig-src="images/005-instagram.svg?crc=270523009" width="25" height="25" alt="" title="Instagram" data-mu-svgfallback="images/005-instagram_poster_.png?crc=382006781" src="images/blank.gif?crc=4208392903" data-content-guid="u29249_content"/></a>
         </div>
        </div>
       </div>
@@ -304,7 +298,17 @@ html { background: url(assets/) #000 no-repeat center center fixed; }
        </div>
       </div>
      </div>
-     <span class="browser_width colelem placeholder" data-placeholder-for="u366-bw_content"><!-- placeholder node --></span>
+     <div class="browser_width colelem temp_no_id" data-orig-id="u366-bw">
+      <div class="temp_no_id" data-orig-id="u366"><!-- column -->
+       <div class="clearfix temp_no_id" data-orig-id="u366_align_to_page">
+        <span class="anchor_item colelem placeholder" data-placeholder-for="works_content"><!-- placeholder node --></span>
+        <span class="h2 clearfix colelem placeholder" data-placeholder-for="u3386-4_content"><!-- placeholder node --></span>
+        <span class="clearfix colelem placeholder" data-placeholder-for="pu3391_content"><!-- placeholder node --></span>
+        <span class="clearfix colelem placeholder" data-placeholder-for="pu4432_content"><!-- placeholder node --></span>
+        <span class="clearfix colelem placeholder" data-placeholder-for="pu17622_content"><!-- placeholder node --></span>
+       </div>
+      </div>
+     </div>
     </div>
     <div class="verticalspacer" data-offset-top="1619" data-content-above-spacer="1619" data-content-below-spacer="249" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu380_content"><!-- placeholder node --></span>
@@ -337,7 +341,17 @@ html { background: url(assets/) #000 no-repeat center center fixed; }
        </div>
       </div>
      </div>
-     <span class="browser_width colelem placeholder" data-placeholder-for="u366-bw_content"><!-- placeholder node --></span>
+     <div class="browser_width colelem temp_no_id" data-orig-id="u366-bw">
+      <div class="temp_no_id" data-orig-id="u366"><!-- column -->
+       <div class="clearfix temp_no_id" data-orig-id="u366_align_to_page">
+        <span class="anchor_item colelem placeholder" data-placeholder-for="works_content"><!-- placeholder node --></span>
+        <span class="h2 clearfix colelem placeholder" data-placeholder-for="u3386-4_content"><!-- placeholder node --></span>
+        <span class="clearfix colelem placeholder" data-placeholder-for="pu3391_content"><!-- placeholder node --></span>
+        <span class="clearfix colelem placeholder" data-placeholder-for="pu4432_content"><!-- placeholder node --></span>
+        <span class="clearfix colelem placeholder" data-placeholder-for="pu17622_content"><!-- placeholder node --></span>
+       </div>
+      </div>
+     </div>
     </div>
     <div class="verticalspacer" data-offset-top="1643" data-content-above-spacer="1643" data-content-below-spacer="249" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu380"><!-- group -->
@@ -394,7 +408,6 @@ html { background: url(assets/) #000 no-repeat center center fixed; }
           </div>
           <span class="nonblock nontext Button rounded-corners btns clearfix colelem placeholder" data-placeholder-for="buttonu1687_content"><!-- placeholder node --></span>
           <span class="nonblock nontext anim_swing arrow clip_frame colelem placeholder" data-placeholder-for="u2067_content"><!-- placeholder node --></span>
-          <span class="size_fixed colelem placeholder" data-placeholder-for="u3530_content"><!-- placeholder node --></span>
          </div>
         </div>
        </div>
@@ -408,12 +421,12 @@ html { background: url(assets/) #000 no-repeat center center fixed; }
          <span class="h2 clearfix colelem placeholder" data-placeholder-for="u3386-4_content"><!-- placeholder node --></span>
          <div class="shadow rounded-corners project-pic colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3391"><!-- simple frame --></div>
          <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="skyeng-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3568"><!-- simple frame --></a>
-         <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3563"><!-- simple frame --></div>
+         <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="sportblend-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3563"><!-- simple frame --></a>
          <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="fastfood-animation.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4432"><!-- simple frame --></a>
          <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="alk-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4424"><!-- simple frame --></a>
-         <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4411"><!-- simple frame --></div>
+         <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="fastfood-animation-copy.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4411"><!-- simple frame --></a>
          <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17622"><!-- simple frame --></div>
-         <div class="project-pic shadow museBGSize colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17615"><!-- simple frame --></div>
+         <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="book-ico.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17615"><!-- simple frame --></a>
          <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17606"><!-- simple frame --></div>
         </div>
        </div>
@@ -491,7 +504,7 @@ $('.btns').addClass('hvr-sink');
 </script>
 
 <script>
-$('.arrow').addClass('hvr-sink');
+$('.arrow').addClass('hvr-hang');
 </script>
 
 <script>
