--- a/st-intensive-lp/index.html
+++ b/st-intensive-lp/index.html
@@ -18,11 +18,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4258810828"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=399846639" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3927473115" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=4041847700" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=8687413" id="nomq_pagesheet"/>
   <![endif]-->
     <!--/*
 
@@ -836,21 +836,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <span class="placeholder" data-placeholder-for="u134-4_0_content"><!-- placeholder node --></span>
          </div>
          <div class="clearfix colelem temp_no_id" data-orig-id="pu306-4"><!-- group -->
-          <div class="clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u306-4"><!-- content -->
+          <div class="clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u306-4"><!-- content -->
            <span class="placeholder" data-placeholder-for="u306-4_0_content"><!-- placeholder node --></span>
           </div>
-          <form class="form-grp clearfix grpelem temp_no_id" method="post" enctype="multipart/form-data" action="scripts/form-u168.php" data-sizePolicy="fluidWidth" data-pintopage="page_fixedLeft" data-orig-id="widgetu168"><!-- none box -->
+          <form class="form-grp clearfix grpelem temp_no_id" method="post" enctype="multipart/form-data" action="scripts/form-u168.php" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-orig-id="widgetu168"><!-- none box -->
            <div class="position_content temp_no_id" data-orig-id="widgetu168_position_content">
-            <div class="fld-grp clearfix colelem temp_no_id" data-required="true" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="widgetu181"><!-- none box -->
-             <span class="fld-input NoWrap actAsDiv shadow rgba-background rounded-corners transition clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u183-4"><!-- content --><div class="temp_no_id" data-orig-id="u183-3"><span class="wrapped-input placeholder" data-placeholder-for="widgetu181_input_content"><!-- placeholder node --></span><label class="wrapped-input fld-prompt temp_no_id" for="widgetu181_input" data-orig-id="widgetu181_prompt"><span class="actAsPara placeholder" data-placeholder-for="widgetu181_prompt_0_content"><!-- placeholder node --></span></label></div></span>
+            <div class="fld-grp clearfix colelem temp_no_id" data-required="true" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="widgetu181"><!-- none box -->
+             <span class="fld-input NoWrap actAsDiv shadow rgba-background rounded-corners transition clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u183-4"><!-- content --><div class="temp_no_id" data-orig-id="u183-3"><span class="wrapped-input placeholder" data-placeholder-for="widgetu181_input_content"><!-- placeholder node --></span><label class="wrapped-input fld-prompt temp_no_id" for="widgetu181_input" data-orig-id="widgetu181_prompt"><span class="actAsPara placeholder" data-placeholder-for="widgetu181_prompt_0_content"><!-- placeholder node --></span></label></div></span>
             </div>
-            <div class="fld-grp clearfix colelem temp_no_id" data-required="true" data-type="email" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="widgetu169"><!-- none box -->
-             <span class="fld-input NoWrap actAsDiv shadow rgba-background rounded-corners transition clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u172-4"><!-- content --><div class="temp_no_id" data-orig-id="u172-3"><span class="wrapped-input placeholder" data-placeholder-for="widgetu169_input_content"><!-- placeholder node --></span><label class="wrapped-input fld-prompt temp_no_id" for="widgetu169_input" data-orig-id="widgetu169_prompt"><span class="actAsPara placeholder" data-placeholder-for="widgetu169_prompt_0_content"><!-- placeholder node --></span></label></div></span>
+            <div class="fld-grp clearfix colelem temp_no_id" data-required="true" data-type="email" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="widgetu169"><!-- none box -->
+             <span class="fld-input NoWrap actAsDiv shadow rgba-background rounded-corners transition clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u172-4"><!-- content --><div class="temp_no_id" data-orig-id="u172-3"><span class="wrapped-input placeholder" data-placeholder-for="widgetu169_input_content"><!-- placeholder node --></span><label class="wrapped-input fld-prompt temp_no_id" for="widgetu169_input" data-orig-id="widgetu169_prompt"><span class="actAsPara placeholder" data-placeholder-for="widgetu169_prompt_0_content"><!-- placeholder node --></span></label></div></span>
             </div>
-            <div class="fld-grp clearfix colelem temp_no_id" data-required="true" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="widgetu176"><!-- none box -->
-             <span class="fld-input NoWrap actAsDiv shadow rgba-background rounded-corners transition clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u177-4"><!-- content --><div class="temp_no_id" data-orig-id="u177-3"><span class="wrapped-input placeholder" data-placeholder-for="widgetu176_input_content"><!-- placeholder node --></span><label class="wrapped-input fld-prompt temp_no_id" for="widgetu176_input" data-orig-id="widgetu176_prompt"><span class="actAsPara placeholder" data-placeholder-for="widgetu176_prompt_0_content"><!-- placeholder node --></span></label></div></span>
+            <div class="fld-grp clearfix colelem temp_no_id" data-required="true" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="widgetu176"><!-- none box -->
+             <span class="fld-input NoWrap actAsDiv shadow rgba-background rounded-corners transition clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u177-4"><!-- content --><div class="temp_no_id" data-orig-id="u177-3"><span class="wrapped-input placeholder" data-placeholder-for="widgetu176_input_content"><!-- placeholder node --></span><label class="wrapped-input fld-prompt temp_no_id" for="widgetu176_input" data-orig-id="widgetu176_prompt"><span class="actAsPara placeholder" data-placeholder-for="widgetu176_prompt_0_content"><!-- placeholder node --></span></label></div></span>
             </div>
-            <button class="submit-btn NoWrap transition rounded-corners clearfix colelem temp_no_id" type="submit" value="Участвовать" tabindex="36" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u174-4"><!-- content -->
+            <button class="submit-btn NoWrap transition rounded-corners clearfix colelem temp_no_id" type="submit" value="Участвовать" tabindex="36" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u174-4"><!-- content -->
              <span class="placeholder" data-placeholder-for="u174-4_0_content"><!-- placeholder node --></span>
             </button>
             <div class="clearfix colelem temp_no_id" data-orig-id="pu180-4"><!-- group -->
@@ -860,7 +860,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
              <div class="clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u175-4"><!-- content -->
               <span class="placeholder" data-placeholder-for="u175-4_0_content"><!-- placeholder node --></span>
              </div>
-             <div class="clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u173-4"><!-- content -->
+             <div class="clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u173-4"><!-- content -->
               <span class="placeholder" data-placeholder-for="u173-4_0_content"><!-- placeholder node --></span>
              </div>
             </div>
